<resources>
    <string name="app_name">Alfred</string>
    <string name="motto">Alfred, taking you places</string>
    <string name="title_activity_main_screen">MainScreen</string>

    <string name="main_username">Username:</string>
    <string name="main_password">Password:</string>
    <string name="main_info">I am a...</string>
    <string name="main_mode1">Driver</string>
    <string name="main_mode2">Rider</string>
    <string name="main_button">LOGIN</string>


    <string name="list_requested">REQUESTED</string>
    <string name="list_pending">PENDING</string>
    <string name="list_accepted">ACCEPTED</string>


    <string name="user_username_text">Username:</string>
    <string name="user_name_text">Name:</string>
    <string name="user_firstname_text">First Name:</string>
    <string name="user_lastname_text">Last Name:</string>
    <string name="user_email_text">Email:</string>
    <string name="user_phone_text">Phone:</string>
    <string name="vehicle_text">Vehicle Info: </string>
    <string name="rating_text">Rating: </string>

    <string name="user_username">JDoe</string>
    <string name="user_name">John Doe</string>
    <string name="user_firstname">John</string>
    <string name="user_lastname">Doe</string>
    <string name="user_email">john.doe@yahoo.com</string>
    <string name="user_phone">888-888-888</string>


    <string name="home_request">Make Request</string>
    <string name="start_text">Start</string>
    <string name="end_text">End</string>
    <string name="add_coordinate_text">Add by Coordinate</string>
    <string name="add_address_text">Add by Address</string>

    <string name="search_coordinate_text">Search by Coordinates</string>
    <string name="search_keyword_text">Search by Keyword</string>
    <string name="search_address_text">Search by Address</string>

    <string name="search_price_text"> Sort by Price</string>
    <string name="search_price_kilo_text">Sort by $/km</string>

    <string name="request_text">Request</string>
    <string name="address_text">Address</string>
    <string name="city_text">City</string>
    <string name="latitude_text">Latitude</string>
    <string name="longitude_text">Longitude</string>
    <string name="keyword_text">Keyword</string>
    <string name="distance_text">Distance</string>
    <string name="confirm_text">CONFIRM</string>
    <string name="cancel_text">CANCEL</string>
    <string name="price_text">$/KM</string>
    <string name="activity_maps">Map</string>

</resources>
