<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/ic_person_black_36dp"
        android:layout_alignParentStart="true"
        android:id="@+id/user_image"/>

    <TextView
        android:text="@string/user_username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/user_image"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="1dp"
        android:id="@+id/textView1"
        android:textSize="@dimen/user_text"
        android:textColor="#000000" />

    <TextView
        android:text="@string/user_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="1dp"
        android:id="@+id/textView3"
        android:textSize="@dimen/user_text"
        android:textColor="#000000"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/user_image" />

    <TextView
        android:text="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="1dp"
        android:paddingLeft="5dp"
        android:id="@+id/textView4"
        android:textSize="@dimen/user_dynamic_text"
        android:textColor="#000000"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/user_image" />

    <TextView
        android:text="@string/user_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_image"
        android:layout_marginBottom="1dp"
        android:id="@+id/textView5"
        android:textSize="@dimen/user_text"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:id="@+id/textView6"
        android:textSize="@dimen/user_dynamic_text"
        android:paddingLeft="5dp"
        android:textColor="#000000"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/user_phone_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:id="@+id/textView7"
        android:textSize="@dimen/user_text"
        android:textColor="#000000"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:id="@+id/textView8"
        android:textSize="@dimen/user_dynamic_text"
        android:paddingLeft="5dp"
        android:textColor="#000000"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/user_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="5dp"
        android:id="@+id/textView2"
        android:textSize="@dimen/user_dynamic_text"
        android:textColor="#000000"
        android:layout_below="@+id/textView1"
        android:layout_alignStart="@+id/textView1" />
</RelativeLayout>
