<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">
        <Button
            android:text="@string/list_requested"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="@dimen/list_type_button"
            android:id="@+id/button_requested" />

        <Button
            android:text="@string/list_pending"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="@dimen/list_type_button"
            android:id="@+id/button_pending" />

        <Button
            android:text="@string/list_accepted"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="@dimen/list_type_button"
            android:id="@+id/button_accepted" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_container"
        android:layout_below="@+id/linearLayout">

        <org.osmdroid.views.MapView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/map_view"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="73dp"
            />

        <Button
            android:text="@string/home_request"
            android:layout_width="match_parent"
            android:textSize="@dimen/button_text"
            android:layout_height="73dp"
            android:id="@+id/request_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_gravity="bottom"/>

    </FrameLayout>

</LinearLayout>
