<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">
        <Button
            android:text="@string/list_requested"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="@dimen/list_type_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/button4" />

        <Button
            android:text="@string/list_pending"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="@dimen/list_type_button"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button5"
            android:id="@+id/button6" />

        <Button
            android:text="@string/list_accepted"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="@dimen/list_type_button"
            android:id="@+id/button5"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button4" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.33"
        android:layout_below="@+id/linearLayout">

    </FrameLayout>

</RelativeLayout>
